--- a/app/views/software/_software_search_result.html.erb
+++ b/app/views/software/_software_search_result.html.erb
@@ -1,28 +1,30 @@
-<div data-software-id="<%= software.id %>" 
-  class="software vertical-result-data index-entry">
+<% if (software.is_draft != true || software.creator == current_user) %>
+  <div data-software-id="<%= software.id %>" 
+    class="software vertical-result-data index-entry">
 
-  <span class="name"><%= link_to software.name, software_path(software) %></span>
+    <span class="name"><%= link_to software.name, software_path(software) %></span>
 
-  <span class="summary"><%= software.summary %></span>
+    <span class="summary"><%= software.summary %></span>
 
-  <span class="metadata">
-    <span class="date">Added on <%= software.created_at.strftime('%B %d, %Y') %> 
-      by <%= software.creator.username %>
+    <span class="metadata">
+      <span class="date">Added on <%= software.created_at.strftime('%B %d, %Y') %> 
+        by <%= software.creator.username %>
+      </span>
+      &mdash;
+
+      <span class="used-in">Used in <%= software.assignments.size %> 
+        <%= 'assignment'.pluralize(software.assignments.size) %> and 
+        <%= software.examples.size %> 
+        <%= 'example'.pluralize(software.examples.size) %></span><br/>
+      <% if software.analyses.size > 0 %>
+        <span class="implements">Analyses implemented: 
+        <%= software.analyses.map{|a|link_to  a.name, get_vertical_path(a)}.join(',').html_safe 
+        %></span><br/>
+      <% end %>
+
+      <span class="tags"><%= render(partial: "tags/tag_badge", 
+      collection: sort_by(software.tags, :text), as: :tag) %></span>
     </span>
-    &mdash;
-
-    <span class="used-in">Used in <%= software.assignments.size %> 
-      <%= 'assignment'.pluralize(software.assignments.size) %> and 
-      <%= software.examples.size %> 
-      <%= 'example'.pluralize(software.examples.size) %></span><br/>
-    <% if software.analyses.size > 0 %>
-      <span class="implements">Analyses implemented: 
-      <%= software.analyses.map{|a|link_to  a.name, get_vertical_path(a)}.join(',').html_safe 
-      %></span><br/>
-    <% end %>
-
-    <span class="tags"><%= render(partial: "tags/tag_badge", 
-    collection: sort_by(software.tags, :text), as: :tag) %></span>
-  </span>
-  
-</div>  
+    
+  </div>  
+<% end %>
