--- a/app/views/analyses/_analysis_search_result.html.erb
+++ b/app/views/analyses/_analysis_search_result.html.erb
@@ -1,23 +1,25 @@
-<div data-analysis-id="<%= analysis.id %>" class="analysis vertical-result-data index-entry">
+<% if analysis.is_draft != true || analysis.creator == current_user %>
+  <div data-analysis-id="<%= analysis.id %>" class="analysis vertical-result-data index-entry">
 
-  <span class="name"><%= link_to analysis.name, analysis_path(analysis) %></span>
+    <span class="name"><%= link_to analysis.name, analysis_path(analysis) %></span>
 
-  <span class="summary"><%= analysis.summary %></span>
+    <span class="summary"><%= analysis.summary %></span>
 
-  <span class="metadata">
-    <span class="date">Added on <%= analysis.created_at.strftime('%B %d, %Y') %> by <%= analysis.creator.username %></span>
-    &mdash;
-    <span class="used-in">Used in <%= analysis.assignments.size %> 
-      <%= 'assignment'.pluralize(analysis.assignments.size) %> and 
-      <%= analysis.examples.size %> 
-      <%= 'example'.pluralize(analysis.examples.size) %></span><br/>
-    <% if analysis.software.size > 0 %>
-      <span class="implemented-in">Implemented in 
-      <%= analysis.software.map{|s|link_to  s.name, get_vertical_path(s)}.join(',').html_safe 
-      %></span><br/>
-    <% end %>
-    <span class="tags"><%= render(partial: "tags/tag_badge", 
-    collection: sort_by(analysis.tags, :text), as: :tag) %></span>
-  </span>
-  
-</div>
+    <span class="metadata">
+      <span class="date">Added on <%= analysis.created_at.strftime('%B %d, %Y') %> by <%= analysis.creator.username %></span>
+      &mdash;
+      <span class="used-in">Used in <%= analysis.assignments.size %> 
+        <%= 'assignment'.pluralize(analysis.assignments.size) %> and 
+        <%= analysis.examples.size %> 
+        <%= 'example'.pluralize(analysis.examples.size) %></span><br/>
+      <% if analysis.software.size > 0 %>
+        <span class="implemented-in">Implemented in 
+        <%= analysis.software.map{|s|link_to  s.name, get_vertical_path(s)}.join(',').html_safe 
+        %></span><br/>
+      <% end %>
+      <span class="tags"><%= render(partial: "tags/tag_badge", 
+      collection: sort_by(analysis.tags, :text), as: :tag) %></span>
+    </span>
+    
+  </div>
+<%end%>
