Updated Is_draft checking
Updated it such that data being populated is being checked on the controller end, for homepage and verticals. Search still populates everything, but visibility is modified based on is_draft and user that is logged in.

--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -21,7 +21,7 @@
             <% end %>
             <%= link_to @example, method: :delete, data: {
                 confirm: "Are you sure you want to delete this page?"} do  
-              %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete How-to">
+              %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete How-to">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
           </button>
         <% end %>
