Made UI Changes
Made UI changes to make app more vibrant

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -79,9 +79,12 @@ h3 {
   overflow: auto;
 }
 
-.selected-vertical {
-  border-bottom: 2px solid steelblue;
-}
+// .selected-vertical{
+//   font-size: 16px;
+//   border-radius: 0 0 20px 20px;
+//   margin: 0 15px 0 15px;
+//   background-color: #ff0072;
+//   }
 
 /* Verticals */
 
