--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,10 @@
   
     <%= form_for(@user) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
-    
+
+    <!-- reCAPTCHA -->
+    <%= recaptcha_tags %>
+
     <!-- User name. -->
     <div class="form-group">
       <%= f.label :username %><span class="required-input">*</span> (1&ndash;50 characters)
